--- a/public/stylesheets/components/_button.scss
+++ b/public/stylesheets/components/_button.scss
@@ -14,12 +14,12 @@
   @include font-style(initial, $medium);
   &::after {
     content: "";
-    @include position(absolute, 0);
+    @include absolute0;
     z-index: -1;
-    opacity: 0;
     border-radius: $btn-radius;
     background: linear-gradient(lighten($clr-sec, 5%), lighten($clr-pri, 5%));
     transition: all 300ms ease-out;
+    @include reset(opacity);
     @include blur-shadow(0, 1px, 20px, darken($clr-bg, 5%));
   }
   &:hover {
