--- a/public/stylesheets/components/_button.scss
+++ b/public/stylesheets/components/_button.scss
@@ -10,8 +10,8 @@
   color: $clr-btn;
   text-align: center;
   line-height: 50px;
-  @include blur-shadow;
-  @include font-style(initial, $medium);
+  @include shadow;
+  @include font(null, $medium);
   &::after {
     content: "";
     @include absolute0;
@@ -20,7 +20,7 @@
     background: linear-gradient(lighten($clr-sec, 5%), lighten($clr-pri, 5%));
     transition: all 300ms ease-out;
     @include reset(opacity);
-    @include blur-shadow(0, 1px, 20px, darken($clr-bg, 5%));
+    @include shadow(0, 1px, 20px, darken($clr-bg, 5%));
   }
   &:hover {
     &::after {
