--- a/public/stylesheets/components/_like-button.scss
+++ b/public/stylesheets/components/_like-button.scss
@@ -4,12 +4,12 @@
   height: 26px;
   position: absolute;
   z-index: 2;
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 1px black;
   cursor: pointer;
   @include reset(background);
-  @include font-style($xl);
+  @include font($xl);
   &:hover:after {
     transform: scale(1);
   }
