--- a/public/stylesheets/abstracts/_mixins.scss
+++ b/public/stylesheets/abstracts/_mixins.scss
@@ -7,7 +7,7 @@
     font-size: $size;
   }
   @if ($weight != null) {
-    font-size: $weight;
+    font-weight: $weight;
   }
 }
 @mixin section-heading {
